# RTPlot-OLD

./: CMakeLists.txt  README.md  REAME.md  RTPlot.pro  mainwindow.ui
apps/: CMakeLists.txt
apps/rtplot/: main.cpp
apps/test_rtplot/: test-rtplot.cpp
inc/: inputparserthread.h  mainwindow.h  qcustomplot.h
include/rtplot/: Fl_plot.H  rtplot.h
src/: CMakeLists.txt  inputparserthread.cpp  main.cpp  mainwindow.cpp  qcustomplot.cpp
src/rtplot/: Fl_plot.cpp  inputparserthread.cpp  rtplot.cpp
